force-app/main/default/objects/Commission_Team__c.object
<CustomObject>
    <description>Commission Teams house the users and the container to hold the dollars associated with the team.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Whether sales team is active  Sales Team members should only reside in one sales team.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Attainment_Schedule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Attainment Schedule that team members will defaul to, team members can override this schedule in another object.</inlineHelpText>
        <label>Commission Attainment Schedule</label>
        <referenceTo>Commission_Attainment_Schedule__c</referenceTo>
        <relationshipLabel>Commission Teams</relationshipLabel>
        <relationshipName>Commission_Teams</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Team_Rollup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Allow for another team to utilize this teams values (Example would be a division team for leader payouts)</inlineHelpText>
        <label>Commission Team Rollup</label>
        <referenceTo>Commission_Team__c</referenceTo>
        <relationshipLabel>Commission Teams</relationshipLabel>
        <relationshipName>Commission_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_All_Team_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pays all active team members regardless of contribution.</description>
        <inlineHelpText>Pays all active team members regardless of contribution.</inlineHelpText>
        <label>Pay All Team Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Payment_Method__c</fullName>
        <description>In conjunction with Pay All Team Members, determines how to assign percentage to user, if Total Team Contribution use the total Dollars * Team Percent attained. if Individual use the individuals contribution * team Percent Attained.</description>
        <inlineHelpText>In conjunction with Pay All Team Members, determines how to assign percentage to user, if Total Team Contribution use the total Dollars * Team Percent attained. if Individual use the individuals contribution * team Percent Attained.</inlineHelpText>
        <label>Team Payment Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Total Team Contribution</fullName>
                </value>
                <value>
                    <fullName>Individual Contribution</fullName>
                </value>
                <value>
                    <fullName>Commission Year Individual Period Payout Tier</fullName>
                </value>
                <value>
                    <fullName>Commission Year Individual Period Payout Step</fullName>
                </value>
                <value>
                    <fullName>Commission Year Total Team Period Payout Tier</fullName>
                </value>
                <value>
                    <fullName>Commission Year Total Team Period Payout Step</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drives the Tier Attainment Percentage</description>
        <label>Team</label>
        <type>Checkbox</type>
    </fields>
    <label>Commission Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Commission_Attainment_Schedule__c</columns>
        <columns>Commission_Team_Rollup__c</columns>
        <columns>Team_Payment_Method__c</columns>
        <columns>Pay_All_Team_Members__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Commission Teams Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PayToAll_vs_IndividualPayout</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Pay_All_Team_Members__c , CONTAINS( TEXT(Team_Payment_Method__c ) , &apos;Individual&apos;) )</errorConditionFormula>
        <errorMessage>Can&apos;t have pay to all with Individual Payout</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PaymentMethod_vs_Schedule</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CONTAINS( TEXT(Team_Payment_Method__c ) , &apos;Commission Year&apos;) , ISPICKVAL( Commission_Attainment_Schedule__r.Calculation_Type__c , &apos;Step&apos;) )</errorConditionFormula>
        <errorMessage>If Schedule Calculation Type = Step, You can Not Pick Commission Year* Payment Methods</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_vs_PayToAll</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Pay_All_Team_Members__c , !Team__c )</errorConditionFormula>
        <errorMessage>You not have Pay To All Member True with Team equals FALSE.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_vs_Schedule</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Team__c ,  ISPICKVAL( Team_Payment_Method__c , &apos;Individual Contribution&apos;) , ISPICKVAL( Commission_Attainment_Schedule__r.Calculation_Type__c , &apos;Step&apos;) )</errorConditionFormula>
        <errorMessage>The selected schedule configuration is not compatible with current Team configuration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_vs_Total_Team_Contribution</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!Team__c ,  CONTAINS( TEXT(Team_Payment_Method__c ) , &apos;Total Team&apos;)  )</errorConditionFormula>
        <errorMessage>You can not have Payment Method of Total Team Contribution with team equals false.</errorMessage>
    </validationRules>
</CustomObject>